P1673: Remove see-below from dot and dotc

--- a/D1673/P1673.md
+++ b/D1673/P1673.md
@@ -7856,13 +7856,13 @@ Alternately, they can use the shortcut `dotc` below.
 template<@_in-vector_@ InVec1,
          @_in-vector_@ InVec2>
 auto dot(InVec1 v1,
-         InVec2 v2) -> /* @_see-below_@ */;
+         InVec2 v2);
 template<class ExecutionPolicy,
          @_in-vector_@ InVec1,
          @_in-vector_@ InVec2>
 auto dot(ExecutionPolicy&& exec,
          InVec1 v1,
-         InVec2 v2) -> /* @_see-below_@ */;
+         InVec2 v2);
 ```
 
 [5]{.pnum} These functions compute a non-conjugated dot product with a default result type.
@@ -7915,13 +7915,13 @@ The four-argument overload is equivalent to
 template<@_in-vector_@ InVec1,
          @_in-vector_@ InVec2>
 auto dotc(InVec1 v1,
-          InVec2 v2) -> /* @_see-below_@ */;
+          InVec2 v2);
 template<class ExecutionPolicy,
          @_in-vector_@ InVec1,
          @_in-vector_@ InVec2>
 auto dotc(ExecutionPolicy&& exec,
           InVec1 v1,
-          InVec2 v2) -> /* @_see-below_@ */;
+          InVec2 v2);
 ```
 
 [4]{.pnum} *Effects:* Let `T` be `decltype(`_`conj-if-needed`_`(declval<typename InVec1::value_type>()) * declval<typename InVec2::value_type>())`.
