P1673: Fix formatting from dot to end of BLAS 1

--- a/D1673/P1673.md
+++ b/D1673/P1673.md
@@ -2555,7 +2555,7 @@ Thus, it is the logical generalization of the vector 1-norm.
 Annex A.1 of the BLAS Standard (p. 173) explains
 that this is also a performance optimization,
 to avoid the expense of one square root per vector element.
-Computing the magnitude is equivalent to two-argument `hypot`.
+Computing the magnitude is equivalent to two-parameter `hypot`.
 Thus, for the same reason, high-quality implementations
 of magnitude for floating-point arguments
 may do extra work besides the square root,
@@ -7804,7 +7804,6 @@ are all equal.
 functions `xDOT` (for real element types) and `xDOTU` (for complex
 element types).  <i>-- end note]</i>
 
-
 ```c++
 template<@_in-vector_@ InVec1,
          @_in-vector_@ InVec2,
@@ -7826,9 +7825,9 @@ Scalar dot(ExecutionPolicy&& exec,
 
 [2]{.pnum} *Returns:* Let `N` be `v1.extent(0)`.
 
-  * [2.1]{.pnum} `init` if `N` is zero.
+  * [2.1]{.pnum} `init` if `N` is zero;
 
-  * [2.2]{.pnum} Otherwise,
+  * [2.2]{.pnum} otherwise,
       *GENERALIZED_SUM*(`plus<>()`, `init`, `v1[0]*v2[0]`, ..., `v1[N-1]*v2[N-1]`).
 
 [3]{.pnum} *Remarks:*
@@ -7868,10 +7867,13 @@ auto dot(ExecutionPolicy&& exec,
 [5]{.pnum} These functions compute a non-conjugated dot product with a default result type.
 
 [6]{.pnum} *Effects:* Let `T` be `decltype(declval<typename InVec1::value_type>() * declval<typename InVec2::value_type>())`.
-Then, the two-parameter overload is equivalent to
-`return dot(v1, v2, T{});`,
-and the three-parameter overload is equivalent to
-`return dot(std::forward<ExecutionPolicy>(exec), v1, v2, T{});`.
+Then,
+
+  * [6.1]{.pnum} the two-parameter overload is equivalent to
+      `return dot(v1, v2, T{});`, and
+
+  * [6.2]{.pnum} the three-parameter overload is equivalent to
+      `return dot(std::forward<ExecutionPolicy>(exec), v1, v2, T{});`.
 
 ##### Conjugated dot product of two vectors [linalg.algs.blas1.dot.dotc]
 
@@ -7904,10 +7906,13 @@ Scalar dotc(ExecutionPolicy&& exec,
 
 [1]{.pnum} These functions compute a conjugated dot product with an explicit specified result type.
 
-[2]{.pnum} *Effects:* The three-argument overload is equivalent to
-`return dot(conjugated(v1), v2, init);`.
-The four-argument overload is equivalent to
-`return dot(std::forward<ExecutionPolicy>(exec), conjugated(v1), v2, init);`.
+[2]{.pnum} *Effects:*
+
+  * [2.1]{.pnum} The three-parameter overload is equivalent to
+      `return dot(conjugated(v1), v2, init);`, and
+
+  * [2.2]{.pnum} the four-parameter overload is equivalent to
+      `return dot(std::forward<ExecutionPolicy>(exec), conjugated(v1), v2, init);`.
 
 [3]{.pnum} Conjugated dot product with default result type
 
@@ -7925,9 +7930,13 @@ auto dotc(ExecutionPolicy&& exec,
 ```
 
 [4]{.pnum} *Effects:* Let `T` be `decltype(`_`conj-if-needed`_`(declval<typename InVec1::value_type>()) * declval<typename InVec2::value_type>())`.
-Then, the two-parameter overload is
-equivalent to `return dotc(v1, v2, T{});`, and the three-parameter overload
-is equivalent to `return dotc(std::forward<ExecutionPolicy>(exec), v1, v2, T{});`.
+Then,
+
+  * [4.1]{.pnum} the two-parameter overload is equivalent to
+      `return dotc(v1, v2, T{});`, and
+
+  * [4.2]{.pnum} the three-parameter overload is equivalent to
+      `return dotc(std::forward<ExecutionPolicy>(exec), v1, v2, T{});`.
 
 #### Scaled sum of squares of a vector's elements [linalg.algs.blas1.ssq]
 
@@ -8021,10 +8030,13 @@ auto vector_two_norm(ExecutionPolicy&& exec, InVec v);
 ```
 
 [4]{.pnum} *Effects:* Let `T` be `decltype(` _`abs-if-needed`_`(declval<typename InVec::value_type>()) * ` _`abs-if-needed`_`(declval<typename InVec::value_type>()))`.
-Then, the one-parameter overload is equivalent to
-`return vector_two_norm(v, T{});`,
-and the two-parameter overload is equivalent to
-`return vector_two_norm(std::forward<ExecutionPolicy>(exec), v, T{});`.
+Then,
+
+  * [4.1]{.pnum} the one-parameter overload is equivalent to
+      `return vector_two_norm(v, T{});`, and
+
+  * [4.2]{.pnum} the two-parameter overload is equivalent to
+      `return vector_two_norm(std::forward<ExecutionPolicy>(exec), v, T{});`.
 
 #### Sum of absolute values of vector elements [linalg.algs.blas1.asum]
 
@@ -8056,15 +8068,15 @@ one-norm for many linear algebra algorithms in practice.
 
 [2]{.pnum} *Returns:* Let `N` be `v.extent(0)`.
 
-  * [2.1]{.pnum} `init` if `N` is zero.
+  * [2.1]{.pnum} `init` if `N` is zero;
 
-  * [2.2]{.pnum} Otherwise,
+  * [2.2]{.pnum} otherwise,
       *GENERALIZED_SUM*(`plus<>()`, `init`,
       _`abs-if-needed`_`(v[0])`, ..., _`abs-if-needed`_`(v[N-1])`),
       if `InVec::value_type`
-      is an arithmetic type.
+      is an arithmetic type;
 
-  * [2.3]{.pnum} Otherwise,
+  * [2.3]{.pnum} otherwise,
       *GENERALIZED_SUM*(`plus<>()`, `init`,
       _`abs-if-needed`_`(` _`real-if-needed`_ `(v[0])) + ` _`abs-if-needed`_`(` _`imag-if-needed`_ `(v[0]))`, ...,
       _`abs-if-needed`_`(` _`real-if-needed`_ `(v[N-1])) + ` _`abs-if-needed`_`(` _`imag-if-needed`_ `(v[N-1]))`).
@@ -8084,10 +8096,13 @@ auto vector_abs_sum(ExecutionPolicy&& exec, InVec v);
 ```
 
 [4]{.pnum} *Effects:* Let `T` be `typename InVec::value_type`.
-Then, the one-parameter overload is equivalent to
-`return vector_abs_sum(v, T{});`,
-and the two-parameter overload is equivalent to
-`return vector_abs_sum(std::forward<ExecutionPolicy>(exec), v, T{});`.
+Then,
+
+  * [4.1]{.pnum} the one-parameter overload is equivalent to
+      `return vector_abs_sum(v, T{});`, and
+
+  * [4.2]{.pnum} the two-parameter overload is equivalent to
+      `return vector_abs_sum(std::forward<ExecutionPolicy>(exec), v, T{});`.
 
 #### Index of maximum absolute value of vector elements [linalg.algs.blas1.iamax]
 
@@ -8112,11 +8127,11 @@ typename InVec::size_type vector_idx_abs_max(
 [3]{.pnum} *Returns:*
 
   * [3.1]{.pnum} `numeric_limits<typename InVec::size_type>::max()`
-      if `v` has zero elements.
+      if `v` has zero elements;
 
-  * [3.2]{.pnum} Otherwise, the index of the first element of `v` having largest absolute value, if `InVec::value_type` is an arithmetic type.
+  * [3.2]{.pnum} otherwise, the index of the first element of `v` having largest absolute value, if `InVec::value_type` is an arithmetic type;
 
-  * [3.3]{.pnum} Otherwise, the index of the first element `v_e` of `v` for which _`abs-if-needed`_`(` _`real-if-needed`_ `(v_e)) + ` _`abs-if-needed`_`(` _`imag-if-needed`_ `(v_e))` has the largest value.
+  * [3.3]{.pnum} otherwise, the index of the first element `v_e` of `v` for which _`abs-if-needed`_`(` _`real-if-needed`_ `(v_e)) + ` _`abs-if-needed`_`(` _`imag-if-needed`_ `(v_e))` has the largest value.
 
 #### Frobenius norm of a matrix [linalg.algs.blas1.matfrobnorm]
 
@@ -8161,10 +8176,13 @@ auto matrix_frob_norm(
 
 [4]{.pnum} *Effects:* Let `T` be
 `decltype(` _`abs-if-needed`_`(declval<typename InMat::value_type>()) * ` _`abs-if-needed`_`(declval<typename InMat::value_type>()))`,
-Then, the one-parameter overload is equivalent to
-`return matrix_frob_norm(A, T{});`,
-and the two-parameter overload is equivalent to
-`return matrix_frob_norm(std::forward<ExecutionPolicy>(exec), A, T{});`.
+Then,
+
+  * [4.1]{.pnum} the one-parameter overload is equivalent to
+      `return matrix_frob_norm(A, T{});`, and
+
+  * [4.2]{.pnum} the two-parameter overload is equivalent to
+      `return matrix_frob_norm(std::forward<ExecutionPolicy>(exec), A, T{});`.
 
 #### One norm of a matrix [linalg.algs.blas1.matonenorm]
 
@@ -8188,9 +8206,9 @@ is convertible to `Scalar`.
 
 [2]{.pnum} *Returns:*
 
-  * [2.1]{.pnum} `init` if `A.extent(1)` is zero.
+  * [2.1]{.pnum} `init` if `A.extent(1)` is zero;
 
-  * [2.2]{.pnum} Otherwise, the sum of `init`
+  * [2.2]{.pnum} otherwise, the sum of `init`
       and the one norm of the matrix $A$.
 
 <i>[Note:</i> The one norm of the matrix `A`
@@ -8215,10 +8233,13 @@ auto matrix_one_norm(
 
 [4]{.pnum} *Effects:* Let `T` be
 `decltype(` _`abs-if-needed`_`(declval<typename InMat::value_type>())`.
-Then, the one-parameter overload is equivalent to
-`return matrix_one_norm(A, T{});`,
-and the two-parameter overload is equivalent to
-`return matrix_one_norm(std::forward<ExecutionPolicy>(exec), A, T{});`.
+Then,
+
+  * [4.1]{.pnum} the one-parameter overload is equivalent to
+      `return matrix_one_norm(A, T{});`, and
+
+  * [4.2]{.pnum} the two-parameter overload is equivalent to
+      `return matrix_one_norm(std::forward<ExecutionPolicy>(exec), A, T{});`.
 
 #### Infinity norm of a matrix [linalg.algs.blas1.matinfnorm]
 
@@ -8242,9 +8263,9 @@ is convertible to `Scalar`.
 
 [2]{.pnum} *Returns:*
 
-  * [2.1]{.pnum} `init` if `A.extent(0)` is zero.
+  * [2.1]{.pnum} `init` if `A.extent(0)` is zero;
 
-  * [2.2]{.pnum} Otherwise, the sum of `init`
+  * [2.2]{.pnum} otherwise, the sum of `init`
       and the infinity norm of the matrix `A`.
 
 <i>[Note:</i> The infinity norm of the matrix `A`
@@ -8269,10 +8290,13 @@ auto matrix_inf_norm(
 
 [4]{.pnum} *Effects:* Let `T` be
 `decltype(` _`abs-if-needed`_`(declval<typename InMat::value_type>())`.
-Then, the one-parameter overload is equivalent to
-`return matrix_inf_norm(A, T{});`,
-and the two-parameter overload is equivalent to
-`return matrix_inf_norm(std::forward<ExecutionPolicy>(exec), A, T{});`.
+Then,
+
+  * [4.1]{.pnum} the one-parameter overload is equivalent to
+      `return matrix_inf_norm(A, T{});`, and
+
+  * [4.2]{.pnum} the two-parameter overload is equivalent to
+      `return matrix_inf_norm(std::forward<ExecutionPolicy>(exec), A, T{});`.
 
 ### BLAS 2 algorithms [linalg.algs.blas2]
 
