P1673: Add missing period

--- a/D1673/P1673.md
+++ b/D1673/P1673.md
@@ -8114,7 +8114,7 @@ typename InVec::size_type vector_idx_abs_max(
 <i>[Note:</i> These functions correspond to the BLAS function
 `IxAMAX`. <i>-- end note]</i>
 
-[1]{.pnum} Let `T` be `decltype(` _`abs-if-needed`_`(` _`real-if-needed`_ `(declval<typename InVec::value_type>())) + ` _`abs-if-needed`_`(` _`imag-if-needed`_ `(declval<typename InVec::value_type>())))`
+[1]{.pnum} Let `T` be `decltype(` _`abs-if-needed`_`(` _`real-if-needed`_ `(declval<typename InVec::value_type>())) + ` _`abs-if-needed`_`(` _`imag-if-needed`_ `(declval<typename InVec::value_type>())))`.
 
 [2]{.pnum} *Mandates:* `declval<T>() < declval<T>()` is a valid expression.
 
