P1673: conjugated is trivial if conj-if-needed is

--- a/D1673/P1673.md
+++ b/D1673/P1673.md
@@ -7147,9 +7147,13 @@ constexpr auto conjugated(
 
 [2]{.pnum} *Returns:*
 
-  * [2.1]{.pnum} `mdspan<typename A::element_type, Extents, Layout, A>(a.data_handle(), a.mapping(), a.accessor().nested_accessor())` if `Accessor` is a specialization of `conjugated_accessor`; otherwise
+  * [2.1]{.pnum} `mdspan<typename A::element_type, Extents, Layout, A>(a.data_handle(), a.mapping(), a.accessor().nested_accessor())` if `Accessor` is a specialization of `conjugated_accessor`;
 
-  * [2.2]{.pnum} `mdspan<typename A::element_type, Extents, Layout, A>(a.data_handle(), a.mapping(), conjugated_accessor(a.accessor()))`.
+  * [2.2]{.pnum} otherwise, `a` if `remove_cvref_t<ElementType>` is an arithmetic type;
+
+  * [2.3]{.pnum} otherwise, `a` if `conj(declval<ElementType>())` is ill-formed, with overload resolution performed in a context that includes the declaration `template<class T> T conj(const T&) = delete;`;
+
+  * [2.4]{.pnum} otherwise, `mdspan<typename A::element_type, Extents, Layout, A>(a.data_handle(), a.mapping(), conjugated_accessor(a.accessor()))`.
 
 [*Example:*
 ```c++
