P1673: Add revision note for previous change

--- a/D1673/P1673.md
+++ b/D1673/P1673.md
@@ -806,6 +806,8 @@ toc: true
         (The latter would cause unwarranted overflow issues,
         especially for BLAS 3 functions.)
 
+    * Make sure that `conjugated` is trivial if _`conj-if-needed`_ would be.
+
 # Purpose of this paper
 
 This paper proposes a C++ Standard Library dense linear algebra
