P1673: {triangle,storage_order}_t -> {triangle,storage_order}_type

--- a/D1673/P1673.md
+++ b/D1673/P1673.md
@@ -791,7 +791,7 @@ toc: true
         `upper_triangle_t` or `lower_triangle_t`.
         Add a nonwording section explaining this design choice.
 
-    * Add `triangle_t` and `storage_order_t` public type aliases
+    * Add `triangle_type` and `storage_order_type` public type aliases
         to `layout_blas_packed`.
 
     * Fix `layout_blas_packed` requirements so that wording of
@@ -6369,8 +6369,8 @@ template<class Triangle,
          class StorageOrder>
 class layout_blas_packed {
 public:
-  using triangle_t = Triangle;
-  using storage_order_t = StorageOrder;
+  using triangle_type = Triangle;
+  using storage_order_type = StorageOrder;
 
   template<class Extents>
   struct mapping {
